fixed layout issues, added footer

--- a/style.css
+++ b/style.css
@@ -148,23 +148,24 @@ input:focus, textarea:focus, button:focus  {
 }
 
 .instagram {
-    grid-row: 6;
-    grid-column: 1 / 9;
+    grid-row: 6 / 9;
+    grid-column: 2 / 5;
 }
 
 #instagram_feed {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 #insta1, #insta2, #insta3, #insta4 {
-    background-position: contain;
+    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
-    width: 320px;
-    height: 400px;
-    margin: 0 .5rem;
+    width: 250px;
+    height: 250px;
+    margin: .5rem;
     box-shadow: 2px 2px 5px rgb(163, 160, 160),
                 -2px 2px 5px rgb(163, 160, 160),
                 2.25px 2.25px 3px black;
@@ -175,8 +176,8 @@ input:focus, textarea:focus, button:focus  {
 
 .caption_box {
     overflow: scroll;
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 250px;
+    max-height: 250px;
     color: white;
     padding: .5rem .5rem;
     transition: background-color 1s;
@@ -200,11 +201,16 @@ input:focus, textarea:focus, button:focus  {
 }
 
 #youtube {
-    grid-row: 7;
-    grid-column: 1 / 9;
+    grid-row: 6 / 9;
+    grid-column: 5 / 8;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+#youtube iframe {
+    margin: 1rem;
 }
 
 
@@ -213,19 +219,20 @@ input:focus, textarea:focus, button:focus  {
 footer {
     grid-row: 9;
     grid-column: 1 / 9;
+    min-height: 200px;
+    background-color: rgba(104, 164, 233, 0.678);
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: center;
 }
 
-h6 {
+h5 {
     text-align: center;
     font-family: "Roboto";
     margin: 0 0 5% 0;
-    padding: 0;
 }
 
-h6 a {
+h5 a {
     color: inherit;
 }
 
